<resources>
    <string name="alwaysUse">Use by default for this action.</string>
    <string name="connect_joystick_notification_title">External joystick connected</string>
    <string name="connect_keyboard_notification_title">External keyboard connected</string>
    <string name="date_picker_decrement_day_button">Decrease day</string>
    <string name="date_picker_decrement_month_button">Decrease month</string>
    <string name="date_picker_decrement_year_button">Decrease year</string>
    <string name="date_picker_dialog_title">Set date</string>
    <string name="date_picker_increment_day_button">Increase day</string>
    <string name="date_picker_increment_month_button">Increase month</string>
    <string name="date_picker_increment_year_button">Increase year</string>
    <string name="date_time_done">Done</string>
    <string name="datetime_dialog_title">Set Date&amp;Time</string>
    <string name="disconnect_joystick_notification_title">External joystick removed</string>
    <string name="disconnect_keyboard_notification_title">External keyboard removed</string>
    <string name="global_action_quickpower_off">Quick start is OFF</string>
    <string name="global_action_quickpower_on">Quick start is ON</string>
    <string name="global_action_rboot_message">Power off your phone when long pressing Power key for 10s</string>
    <string name="global_action_reset">Restart</string>
    <string name="md__drawerClosedIndicatorDesc">Open drawer</string>
    <string name="md__drawerOpenIndicatorDesc">Close drawer</string>
    <string name="multi_language_20404">China Telecom</string>
    <string name="multi_language_46000">China Mobile</string>
    <string name="multi_language_46001">China Unicom</string>
    <string name="multi_language_46002">China Mobile</string>
    <string name="multi_language_46003">China Telecom</string>
    <string name="multi_language_46007">China Mobile</string>
    <string name="multi_language_46019">460 19</string>
    <string name="noApplications">No apps can perform this action.</string>
    <string name="no_content">No corresponding content</string>
    <string name="ota_mount_notification_message">Select to copy files to/from external storage device</string>
    <string name="ota_mount_notification_title">External storage device connected</string>
    <string name="ota_unexpectedly_removed_notification_message">Unmount external storage device before removing to avoid data loss</string>
    <string name="ota_unexpectedly_removed_notification_title">External storage devices unexpectedly removed</string>
    <string name="ota_unmount_notification_message">Unmount the external storage device so you can safely remove it</string>
    <string name="ota_unmount_notification_title">Unmount external storage device</string>
    <string name="ota_unmounted_notification_title">External storage device Unmounted</string>
    <string name="pppoe_indicator_detail_connect_failure">Unconnected</string>
    <string name="pppoe_indicator_detail_connected">Connected</string>
    <string name="pppoe_indicator_detail_connecting">Connecting...</string>
    <string name="pppoe_indicator_title">PPPOE</string>
    <string name="reboot_confirm">Your phone will restart.</string>
    <string name="reboot_confirm_question">Do you want to restart?</string>
    <string name="reboot_title">Restart</string>
    <string name="search_go">Search</string>
    <string name="searchview_description_clear">Clear query</string>
    <string name="searchview_description_query">Search query</string>
    <string name="searchview_description_search">Search</string>
    <string name="searchview_description_submit">Submit query</string>
    <string name="searchview_description_voice">Voice search</string>
    <string name="set_silent">Silent</string>
    <string name="system_res_label">System Resources Package</string>
    <string name="textoff" />
    <string name="texton" />
    <string name="time_picker_decrement_hour_button">Decrease hour</string>
    <string name="time_picker_decrement_minute_button">Decrease minute</string>
    <string name="time_picker_decrement_set_am_button">Set AM</string>
    <string name="time_picker_increment_hour_button">Increase hour</string>
    <string name="time_picker_increment_minute_button">Increase minute</string>
    <string name="time_picker_increment_set_pm_button">Set PM</string>
    <string name="toast_wifi_connected_message">Has connected to SSID %1$s.</string>
    <string name="whichApplication">Complete action using</string>
    <string name="whichHomeApplication">Select a home app</string>
    <string name="wifi_hotspot_turned_off">WLAN Hotspot turned off</string>
    <string name="wifi_hotspot_turned_off_summary">Sleep time is activated, you can modify it in WLAN hotspot-Advanced-Hotspot sleep policy.</string>
    <string name="zte_days_of_week_Fri">Fri</string>
    <string name="zte_days_of_week_Mon">Mon</string>
    <string name="zte_days_of_week_Sat">Sat</string>
    <string name="zte_days_of_week_Sun">Sun</string>
    <string name="zte_days_of_week_Thu">Thu</string>
    <string name="zte_days_of_week_Tue">Tue</string>
    <string name="zte_days_of_week_Wed">Wed</string>
    <string name="back_button_label">Back</string>
    <string name="capital_off">OFF</string>
    <string name="capital_on">ON</string>
    <string name="next_button_label">Next</string>
    <string name="skip_button_label">Skip</string>
    <string name="app_name">Fingerprint service</string>
    <string name="apply_to">Use fingerprint for</string>
    <string name="black_wakeup_unlock">Wake-up and unlock your phone</string>
    <string name="black_wakeup_unlock_sum">Read your fingerprint to unlock the phone when screen is off or locked.</string>
    <string name="access_app_ctl_tip">Access and control apps</string>
    <string name="access_app_ctl_tip_sum">Read your fingerprint to access app lock of Mi-Assistant.</string>
    <string name="access_privacy_ctl_tip">Access privacy</string>
    <string name="access_privacy_ctl_tip_sum">Read your fingerprint to access privacy of Mi-Assistant.</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="fingerprint_manager">Fingerprint manager</string>
    <string name="add_fingerprint">Add fingerprint</string>
    <string name="fingerprint_input">Add fingerprint</string>
    <string name="fingerprint_input_later">Register later</string>
    <string name="fingerprint_input_now">Register</string>
    <string name="fingerprint_input_tip">You have no fingerprint registered, Register now?</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete_confirm">Confirm delete: %1$s</string>
    <string name="please_start">Please place your finger on fingerprint reader at the back of your phone to register fingerprint.</string>
    <string name="please_continue">Please place your finger on fingerprint reader. Raise your finger and adjust its position after your feel the phone vibrate.</string>
    <string name="please_continue1">Place your finger</string>
    <string name="enroll_success">Congratulations</string>
    <string name="enroll_success1">Your fingerprint is registered successfully!</string>
    <string name="move_finger">Raise your finger and register again.</string>
    <string name="re_move_finger">Please place your finger again.</string>
    <string name="finger_exist">The fingerprint already exists.</string>
    <string name="finger_percent_tip">%1$d/6</string>
    <string name="finger_max_5">You can register at most 5 fingerprints.</string>
    <string name="finger_fail">Error occurred, please try later!</string>
    <string name="finger_fail_reboot">Unrecoverable error occurred. Please reboot your phone and retry later!</string>
    <string name="fingerprint_enrol_error">Register failed，please restart.</string>
    <string name="please_enrol_more">Complete and safe fingerprint info should contain scraggly lines on the tip and edge of your finger.</string>
    <string name="touch_for_take_photo_tip">Take photo</string>
    <string name="touch_for_take_photo_sum">Touch fingerprint monitor to take photo.</string>
    <string name="touch_for_answer_call_tip">Answer call</string>
    <string name="touch_for_answer_call_sum">Touch fingerprint monitor to answer call.</string>
    <string name="delete_confirm2">Confirm to delete this fingerprint?</string>
    <string name="enrol_hint_front">Place your finger</string>
    <string name="enrol_hint_front2">Raise your finger</string>
    <string name="enrol_hint_front_sum">Please place your finger on fingerprint reader at the back of your phone to register fingerprint.</string>
    <string name="enrol_hint_side">Place your finger</string>
    <string name="enrol_hint_side_sum">Please place your finger on fingerprint reader. Raise your finger and adjust its position after your feel the phone vibrate.</string>
    <string name="enrol_hint_side2">Raise your finger</string>
    <string name="enrol_hint_side2_sum">Complete and safe fingerprint info should contain scraggly lines on the tip and edge of your finger.</string>
    <string name="save">Save</string>
    <string name="fingerprint_function">Fingerprint Function（with verify）</string>
    <string name="touch_function">Touch Function（without verify）</string>
    <string name="quick_open_application">Quick Open Application</string>
    <string name="quick_open_application_sum">Read your fingerprint to open app when screen is off or locked.</string>
    <string name="disable_unlock_screen_title">Disable the fingerprint unlock</string>
    <string name="disable_unlock_screen_tip">After the closure of the fingerprint can not be used to Quick Open Application, whether or not to close?</string>
    <string name="unbind_application">Unbind Application</string>
    <string name="selected_app_category">Already selected application</string>
    <string name="suggest_app_category">Recommended applications</string>
    <string name="other_app_category">Other applications</string>
    <string name="no_selected_application">No application is selected</string>
    <string name="check_enrolled_finger_tips">Tip: Do not remember which finger prints? You can place your finger on the fingerprint reader to see the corresponding fingerprint.</string>
    <string name="open_application_tips">Launch %s</string>
    <string name="touch_for_double_click_open_tip">Quick launch an app</string>
    <string name="touch_for_check_notification_tip">View notification drawer</string>
    <string name="touch_for_check_recent_application_tip">View recent apps</string>
    <string name="touch_for_Browse_pictures_tip">View pictures</string>
    <string name="touch_for_flip_over_tip">阅读翻页</string>
    <string name="touch_for_back_to_desktop_tip">返回桌面</string>
    <string name="touch_for_double_click_open_sum">Double tap on fingerprint sensor to launch a corresponding app.</string>
    <string name="touch_for_check_notification_sum">Swipe down on fingerprint sensor to unfold notification drawer; swipe up to fold it.</string>
    <string name="touch_for_flip_over_sum">在指定浏览器或阅读软件，下滑指纹识别器可翻页，上滑查看上一页</string>
    <string name="fingerprint_manager_and_setting_sum">Manage fingerprints and set up fingerprint sensor.</string>
    <string name="touch_for_back_to_desktop_sum">任意应用界面长按指纹识别器返回桌面</string>
    <string name="touch_for_check_recent_application_sum">When viewing Home screen, swipe up on fingerprint sensor for recent apps.</string>
    <string name="touch_for_Browse_pictures_sum">Launch Gallery and then swipe left or right on fingerprint sensor to view pictures.</string>
    <string name="long_click">Press &amp; hold</string>
    <string name="double_click">Double tap</string>
    <string name="slip_operation">Swipe</string>
</resources>