<?xml version="1.0" encoding="utf-8"?>
<com.zte.mifavor.preference.PreferenceScreen android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.zte.mifavor.preference.PreferenceCategory android:title="@string/fingerprint_function" android:key="fingerprint_manage">
        <com.zte.mifavor.preference.Preference android:title="@string/fingerprint_manager" android:key="fingerCount" android:summary="@string/fingerprint_manager_and_setting_sum" />
        <com.zte.mifavor.preference.SwitchPreference android:title="@string/black_wakeup_unlock" android:key="lock_for_screen" android:summary="@string/black_wakeup_unlock_sum" />
        <com.zte.mifavor.preference.Preference android:title="@string/quick_open_application" android:key="quick_open_app" android:summary="@string/quick_open_application_sum" android:dependency="lock_for_screen" />
    </com.zte.mifavor.preference.PreferenceCategory>
    <com.zte.mifavor.preference.PreferenceCategory android:title="@string/long_click" android:key="touch_for">
        <com.zte.mifavor.preference.SwitchPreference android:title="@string/touch_for_take_photo_tip" android:key="touch_for_take_photo" android:summary="@string/touch_for_take_photo_sum" />
    </com.zte.mifavor.preference.PreferenceCategory>
    <com.zte.mifavor.preference.PreferenceCategory android:title="@string/double_click" android:key="touch_for">
        <com.zte.mifavor.preference.Preference android:title="@string/touch_for_double_click_open_tip" android:key="double_click_start_application" android:summary="@string/touch_for_double_click_open_sum" />
    </com.zte.mifavor.preference.PreferenceCategory>
    <com.zte.mifavor.preference.PreferenceCategory android:title="@string/slip_operation" android:key="touch_for">
        <com.zte.mifavor.preference.SwitchPreference android:title="@string/touch_for_check_notification_tip" android:key="view_notification" android:summary="@string/touch_for_check_notification_sum" />
    </com.zte.mifavor.preference.PreferenceCategory>
</com.zte.mifavor.preference.PreferenceScreen>